# miniCrowd

./: AllegroManager.cpp  AllegroManager.h  Amie.cpp  Amie.h  CMakeLists.txt  EntitiesManager.cpp  EntitiesManager.h  Entity.cpp  Entity.h  README.md  Readme.txt  Rectangle.cpp  Rectangle.h  main.cpp
